# NESemu

./: .gitignore  CMakeLists.txt  QUESTIONS  README  README.md  TODO  main.cpp
ROMs/: README
src/Bus/inc/: Bus.h
src/Bus/src/: Bus.cpp  BusCons.cpp  BusTables.cpp
src/CPU/: CMakeLists.txt
src/CPU/inc/: CPU.h  FlagsReg.h  FunPtr.h  Porv.h  StackReg.h  Symbols.h  Util.h
src/CPU/src/: Cons.cpp  Exec.cpp  FlagsHelpers.cpp  FlagsReg.cpp  FunPtr.cpp  Helpers.cpp  Loading.cpp  StackReg.cpp  Tables.cpp  Util.cpp
src/CPU/src/Opcodes/: Arith.cpp  Bra.cpp  Ctrl.cpp  Flags.cpp  Inc.cpp  Load.cpp  Logical.cpp  Others.cpp  Shift.cpp  Stack.cpp  Trans.cpp
src/Color/inc/: Color.h
src/Color/src/: Color.cpp
src/Debugger/: CMakeLists.txt
src/Debugger/inc/: Debugger.h  DebuggerImgui.h  DebuggerStrings.h  OCPair.h
src/Debugger/src/: Cons.cpp  Debugger.cpp  DebuggerImgui.cpp  DebuggerImguiCons.cpp  DebuggerImguiPrint.cpp  DebuggerStrings.cpp  Print.cpp  Tables.cpp
src/Mapper/inc/: Mapper.h
src/Mapper/src/: LoadRom.cpp  Mapper.cpp  MapperCons.cpp
src/PPU/inc/: PPU.h
src/PPU/src/: Handlers.cpp  PPUcons.cpp
src/RomLoader/: CMakeLists.txt
src/RomLoader/inc/: RomLoader.h
src/RomLoader/src/: RomLoader.cpp
src/incGlobal/: CMakeLists.txt  Global.h  Util.cpp  Util.h
